@@ -1,3 +1,8 @@
+2000-10-19  Michael Hanni <mhanni@sprintmail.com>
+
+	* nstabview.m: rewrote, hopefully better reflects the status of
+	NSTabView (check gui/Changelog)
+
 2000-10-15  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Ink/*
